Add address and implement database requests